<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:textSize="18sp" >

    <TextView
        android:id="@+id/about_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/about_us"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />

    <View style="@style/my_horizontal_line_style" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <!-- 分隔线 -->

        <View style="@style/my_horizontal_line_style" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:textSize="18sp" >

                <TextView
                    android:id="@+id/about_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/info_us"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_Txt_tec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/info_mail"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_url_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:alpha="0.05"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_tw_pw" />
    </FrameLayout>

</LinearLayout>